Fixed bug with uncaught exception during startup of torrent.

BUG: 128567


svn path=/trunk/extragear/network/ktorrent/; revision=547838